# MHR_Play

./: .gitignore  .repo_local_config.example.json  ARCHITECTURE.md  README.md  README.zh-CN.md  embed.html  index.html  mhr_play_dev_plan.md  package.json  tsconfig.json
app/: embed_demo_entry.mjs  entry_bootstrap.js  main.mjs  mhr_play_host.mjs  mount.mjs  standalone_entry.mjs  viewer_shell.css  viewer_shell.js
backend/: backend_core.mjs
core/: asset_bundle.mjs  runtime_config.mjs  viewer_runtime.mjs
demo_assets/: manifest.json
doc/: README.md  beta_release_checklist.md  mhr_momentum_runtime_design.md  site_release_checklist.md
mjwp_inject/: README.md  run.ps1  server.py
native/: CMakeLists.txt
native/include/: mhr_model_data_api.h  mhr_native_api.h
native/src/: mhr_model_data_api.cpp  mhr_native_api.cpp  mhr_runtime.cpp  mhr_runtime.hpp
release/: site_manifest.json
renderer/: pipeline.mjs  three_helpers.mjs
tools/: browser_smoke.py  build_demo_bundle.py  build_github_pages.py  build_native.py  build_site_app.py  build_site_release.py  build_wasm_runtime.py  check_module_boundaries.mjs  check_repo_hygiene.mjs  dev_server.py  export_public_beta.py  export_site.py  generate_worker_protocol.mjs  local_config.py  mhr_asset_preprocess.py  mhr_exact_vs_full_cpu_stage_parity.py  mhr_full_cpu_stage_compare.py  mhr_full_cpu_stage_oracle.py  mhr_full_reference.py  mhr_native_harness.py  mhr_native_stage_probe.py  mhr_parity_ablation.py  mhr_portable_vs_full_cpu_stage_parity.py  mhr_python_oracle.py  mhr_reference.py  mhr_runtime_compare_bench.py  run_node.py  (+10 more)
(+91 files in other folders)
